--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
   <header>
     <h1>'' Hello Lola, Hey Lolo! ,,</h1>
-    <p> made with love by Nevado N.R, BSN2, Section 17 ♡</p>
+    <p> made with love by Nevado N.R, BSN2, Section 17 for seniors ♡</p>
   </header>
   <main>
 
