--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
       <h2>Health Bot</h2>
       <div class="chatbox" id="chatbox">
         <p><strong>Bot:</strong> Kumusta! Ako ang iyong health bot. Anong nais mong itanong?</p>
+          <p>hal: "sakit ng ulo" || "headache"</p>
+          <p>    "lagnat" || "fever"</p>
+          <p>    "gamot" || "medicine"</p>
+          <p>    "emergency"</p>
+          <p>    "presyon" || "blood pressure"</p>
       </div>
       <div class="input-area">
         <input type="text" id="userInput" placeholder="I-type ang tanong mo...">
