--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section>
       <h2>Health Bot</h2>
       <div class="chatbox" id="chatbox">
-        <p><strong>Bot:</strong> Kumusta! Ako ang iyong health bot. Anong nais mong itanong? Hal.: "sakit ng ulo" || "headache", "lagnat" || "fever", "gamot" || "medicine", "emergency", "presyon" || "blood pressure"</p>
+        <p><strong>Bot:</strong> Kumusta! Ako ang iyong health bot. Anong nais mong itanong? <br> Hal: "sakit ng ulo"/"headache", "lagnat"/"fever", "gamot"/"medicine", "emergency", "presyon"/"blood pressure"</p>
       </div>
       <div class="input-area">
         <input type="text" id="userInput" placeholder="I-type ang tanong mo...">
